--- a/optativolll-introducion/optativolll-introducion.csproj
+++ b/optativolll-introducion/optativolll-introducion.csproj
@@ -9,11 +9,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.1.35" />
     <PackageReference Include="Npgsql" Version="8.0.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="consola\" />
+    <PackageReference Include="Stripe.net" Version="44.8.0" />
   </ItemGroup>
 
 </Project>
